[gd_scene load_steps=7 format=3 uid="uid://bekwr5c7nyns1"]

[ext_resource type="Script" uid="uid://cchmdr7pg25o7" path="res://objects/hard_song_select.gd" id="1_jxho8"]
[ext_resource type="Theme" uid="uid://duvviehoow83i" path="res://ButtonTexture.tres" id="2_4slfr"]
[ext_resource type="Texture2D" uid="uid://du5kt7g81bq76" path="res://BG.png" id="3_taosf"]
[ext_resource type="AudioStream" uid="uid://bp0u4wk5whh88" path="res://sounds/music/Mus_BBRKZTitle.mp3" id="4_ketwn"]
[ext_resource type="Texture2D" uid="uid://bp4dldato0po7" path="res://backbutton.png" id="5_3h6an"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_p10fs"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jxho8")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 438.0
offset_top = 212.0
offset_right = 738.0
offset_bottom = 658.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
z_index = 1
layout_mode = 2

[node name="Warmin\'Up" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_4slfr")
text = "Warmin'Up"

[node name="Raveyard" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_4slfr")
text = "Raveyard"

[node name="Mortally Challenged" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_4slfr")
text = "Mortally Challenged"

[node name="Yatatatata" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_4slfr")
text = "Yatatatata"

[node name="Bg" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
z_index = -1
position = Vector2(139, 112)
scale = Vector2(0.599479, 0.6)
texture = ExtResource("3_taosf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ketwn")

[node name="BackButton" type="Button" parent="."]
z_index = 1
material = SubResource("CanvasItemMaterial_p10fs")
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 803.0
offset_top = 93.0
offset_right = 2029.0
offset_bottom = 1013.0
scale = Vector2(0.0960232, 0.0913065)
icon = ExtResource("5_3h6an")
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Warmin\'Up" to="." method="_on_warmin_up_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Raveyard" to="." method="_on_raveyard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Mortally Challenged" to="." method="_on_mortally_challenged_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Yatatatata" to="." method="_on_yatatatata_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
